# project-harvey-test

./: .dockerignore  .gitignore  AGENT_WORKING.md  Dockerfile  README.md  TECHNICAL_DOCS.md  check_user.py  checkpoints.db-shm  checkpoints.db-wal  clean_policies.py  debug_dateparser.py  debug_dateparser_2.py  docker-compose.release.yml  docker-compose.yml  entrypoint.sh  final_verification.py  learn.md  list_users.py  manage.py  pyproject.toml  pytest.ini  reindex_policy.py  reset_db.py  sample_policy.txt  test_draft_logic.py  test_grok_integration.py  test_lite_nlp.py  test_norm_output.py  test_output.txt  test_transformers.py  verify_api_key.py  verify_enc_3.py  verify_fix_e2e.py  verify_signals.py
Documentiation/: AGENT_WORKING.md  DEPLOYMENT.md  Data.md  HR_INTEGRATION.md  HR_INTEGRATION_DIAGRAMS.md  TECHNICAL_DOCS.md  learn.md
adminpanel/: admin.py  forms.py  urls.py  views.py
adminpanel/templates/: add_employee.html  add_org_admin.html  add_policy.html  admin_base.html  dashboard.html  invite_user.html  manage_candidates.html  manage_employees.html  manage_jobs.html  manage_org_admins.html  manage_policies.html  org_settings.html
adminpanel/views/: __init__.py  admins.py  dashboard.py  employees.py  invites.py  leaves.py  policies.py  recruitment.py  settings.py  utils.py
assets/css/: tailwind.css
core/: action_result.py  actions.py  admin.py  agent.py  api.py  auth_views.py  consumers.py  intent.py  langchain_client.py  llm_engine.py  llm_setup.py  models.py  redis_utils.py  routing.py  signals.py  tests.py  urls.py  vector_store.py  views.py
core/llm_graph/: chat_service.py  graph.py  harvey_prompt.py  nodes.py  state.py  summarizer.py  tools_registry.py
core/migrations/: 0001_initial.py  0002_alter_user_role.py  0003_rename_start_time_conversation_created_at_and_more.py  0004_conversation_context_state.py  0005_conversation_memory_state.py  0006_calendarevent_duration_minutes.py  0007_graphrun.py  0008_alter_user_groups_alter_user_user_permissions_policy_and_more.py  0009_candidatejobscore.py  0010_invite.py  0011_user_google_access_token_user_google_refresh_token_and_more.py  0012_remove_user_google_access_token_and_more.py  0013_organization_google_refresh_token_and_more.py  0014_organization_google_connected_email.py
core/models/: __init__.py  chatbot.py  invite.py  organization.py  policy.py  recruitment.py
core/services/: candidate_scorer.py  model_indexer.py  policy_indexer.py  resume_parser.py
integrations/: urls.py  views.py
policies/: leave_policy_c9RATTy.txt  policy_uxTNncx.txt  test_leave_policy.txt
project_harvey/: asgi.py  settings.py  urls.py  wsgi.py
resumes/: resume_hMlAMYr.txt
tests/: test_core_e2e.py  test_draft_logic.py  test_hil_mock.py  test_hil_real.py  test_integration_tools.py  test_knowledge_base.py  test_lite_nlp.py  test_llm_context.py  test_multi_convo_api.py  test_norm_output.py  test_policy.py  test_rag_filtering.py  test_rag_fixes.py  test_rag_recall.py  test_router_architecture.py  test_search.py  test_tool_robustness.py  test_tools_db.py  test_transformers.py  test_vector_integration.py
(+112 files in other folders)
