[project]
name = "project_harvey"
version = "0.1.0"
description = ""
authors = [
    {name = "nathanmendis",email = "nathanmendis17@gmail.com"}
]

requires-python = ">=3.13,<4.0"

dependencies = [
    "django (>=5.2.7,<6.0.0)",
    "openai (>=2.3.0,<3.0.0)",
    "pydantic (>=2.12.0,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "django-tailwind-cli (>=4.4.2,<5.0.0)",
    "django-tailwind (>=4.2.0,<5.0.0)",
    "google-genai (>=1.43.0,<2.0.0)",
    "channels (>=4.3.1,<5.0.0)",
    "daphne (>=4.2.1,<5.0.0)",
    "langchain-core (>=1.0.3,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "google-generativeai (>=0.8.3,<0.9.0)",
    "django-redis (>=6.0.0,<7.0.0)",
    "dateparser (>=1.2.2,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
