[tool.poetry]
name = "project_harvey"
version = "0.1.0"
description = ""
# FIX: Use the simple string format for authors
authors = ["nathanmendis <nathanmendis17@gmail.com>"] 
readme = "README.md"
packages = [{include = "project_harvey"}]


[tool.poetry.dependencies]
python = ">=3.13,<4.0"
django = ">=5.2.7,<6.0.0"
openai = ">=2.3.0,<3.0.0"
pydantic = ">=2.12.0,<3.0.0"
httpx = ">=0.28.1,<0.29.0"
"python-dotenv" = ">=1.1.1,<2.0.0"
tqdm = ">=4.67.1,<5.0.0"
"django-tailwind-cli" = ">=4.4.2,<5.0.0"
"django-tailwind" = ">=4.2.0,<5.0.0"

channels = ">=4.3.1,<5.0.0"
daphne = ">=4.2.1,<5.0.0"
"django-redis" = ">=6.0.0,<7.0.0"
dateparser = ">=1.2.2,<2.0.0"
langchain = "^1.0.7"
langchain-google-genai = "^3.0.3"
langchain-core = "^1.0.5"
langchain-community = "^0.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"